name:              blog
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     RecaptchaKeys

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: Cabal == 1.16.0
                 , HaXml == 1.23.3
                 , ReadArgs == 1.2.1
                 , SHA == 1.6.1
                 , aeson == 0.6.2.1
                 , ansi-terminal == 0.6.1
                 , array == 0.4.0.1
                 , asn1-data == 0.7.1
                 , asn1-types == 0.2.2
                 , attoparsec == 0.10.4.0
                 , attoparsec-conduit == 1.0.1.2
                 , authenticate == 1.3.2.6
                 , base == 4.6.0.1
                 , base-unicode-symbols == 0.2.2.4
                 , base64-bytestring == 1.0.0.1
                 , base64-conduit == 1.0.0
                 , basic-prelude == 0.3.6.0
                 , bin-package-db == 0.0.0.0
                 , binary == 0.5.1.1
                 , blaze-builder == 0.3.3.2
                 , blaze-builder-conduit == 1.0.0
                 , blaze-html == 0.6.1.2
                 , blaze-markup == 0.5.1.6
                 , byteable == 0.1.1
                 , byteorder == 1.0.4
                 , bytestring == 0.10.0.2
                 , case-insensitive == 1.1.0.2
                 , cereal == 0.3.5.2
                 , certificate == 1.3.9
                 , cipher-aes == 0.2.6
                 , cipher-rc4 == 0.1.4
                 , classy-prelude == 0.5.8
                 , clientsession == 0.9.0.3
                 , conduit == 1.0.9.3
                 , containers == 0.5.0.0
                 , cookie == 0.4.0.1
                 , cprng-aes == 0.5.2
                 , crypto-api == 0.12.2.2
                 , crypto-cipher-types == 0.0.9
                 , crypto-conduit == 0.5.2.1
                 , crypto-numbers == 0.2.3
                 , crypto-pubkey == 0.2.3
                 , crypto-pubkey-types == 0.4.1
                 , crypto-random == 0.0.7
                 , cryptohash == 0.9.1
                 , cryptohash-cryptoapi == 0.1.0
                 , css-text == 0.1.1
                 , data-default == 0.5.3
                 , data-default-class == 0.0.1
                 , data-default-instances-base == 0.0.1
                 , data-default-instances-containers == 0.0.1
                 , data-default-instances-dlist == 0.0.1
                 , data-default-instances-old-locale == 0.0.1
                 , date-cache == 0.3.0
                 , deepseq == 1.3.0.1
                 , directory == 1.2.0.1
                 , dlist == 0.6.0.1
                 , email-validate == 1.0.0
                 , entropy == 0.2.2.4
                 , failure == 0.2.0.1
                 , fast-logger == 0.3.1
                 , file-embed == 0.0.6
                 , filepath == 1.3.0.1
                 , fsnotify == 0.0.11
                 , ghc == 7.6.3
                 , ghc-paths == 0.1.0.9
                 , ghc-prim == 0.3.0.0
                 , hamlet == 1.1.7.5
                 , hashable == 1.2.1.0
                 , hinotify == 0.3.6
                 , hjsmin == 0.1.4.1
                 , hoopl == 3.9.0.0
                 , hpc == 0.6.0.0
                 , http-attoparsec == 0.1.0
                 , http-conduit == 1.9.6
                 , http-date == 0.0.4
                 , http-reverse-proxy == 0.1.1.6
                 , http-types == 0.8.3
                 , integer-gmp == 0.5.0.0
                 , language-javascript == 0.5.7
                 , lifted-base == 0.2.1.1
                 , mime-mail == 0.4.3
                 , mime-types == 0.1.0.3
                 , mmorph == 1.0.0
                 , monad-control == 0.3.2.2
                 , monad-logger == 0.3.1.1
                 , mtl == 2.1.2
                 , nats == 0.1.2
                 , network == 2.4.2.1
                 , network-conduit == 1.0.0
                 , network-info == 0.2.0.3
                 , old-locale == 1.0.0.5
                 , old-time == 1.1.0.1
                 , optparse-applicative == 0.5.2.1
                 , parsec == 3.1.4
                 , path-pieces == 0.1.3.1
                 , pem == 0.2.1
                 , persistent == 1.1.5.1
                 , persistent-sqlite == 1.1.5
                 , persistent-template == 1.1.3.1
                 , polyparse == 1.9
                 , pool-conduit == 0.1.2
                 , pretty == 1.1.1.0
                 , primitive == 0.5.1.0
                 , process == 1.1.0.2
                 , project-template == 0.1.3.2
                 , publicsuffixlist == 0.1
                 , pureMD5 == 2.1.2.1
                 , pwstore-fast == 2.4.1
                 , random == 1.0.1.1
                 , regex-base == 0.93.2
                 , regex-compat == 0.95.1
                 , regex-posix == 0.95.2
                 , resource-pool == 0.2.1.1
                 , resourcet == 0.4.10
                 , rss == 3000.2.0.2
                 , rts == 1.0
                 , safe == 0.3.3
                 , securemem == 0.1.3
                 , semigroups == 0.12.1
                 , shakespeare == 1.0.5.1
                 , shakespeare-css == 1.0.6.6
                 , shakespeare-i18n == 1.0.0.5
                 , shakespeare-js == 1.1.4.1
                 , shakespeare-text == 1.0.0.10
                 , silently == 1.2.4.1
                 , simple-sendfile == 0.2.13
                 , skein == 1.0.8
                 , socks == 0.5.4
                 , split == 0.2.2
                 , stm == 2.4.2
                 , strict == 0.3.2
                 , stringsearch == 0.3.6.5
                 , syb == 0.4.1
                 , system-fileio == 0.3.11
                 , system-filepath == 0.4.8
                 , tagged == 0.7
                 , tagsoup == 0.13
                 , tar == 0.4.0.1
                 , template-haskell == 2.8.0.0
                 , text == 0.11.3.1
                 , time == 1.4.0.1
                 , tls == 1.1.5
                 , tls-extra == 0.6.6
                 , transformers == 0.3.0.0
                 , transformers-base == 0.4.1
                 , unix == 2.6.0.1
                 , unix-compat == 0.4.1.1
                 , unix-time == 0.1.9
                 , unordered-containers == 0.2.3.3
                 , utf8-light == 0.4.2
                 , utf8-string == 0.3.7
                 , vault == 0.2.0.4
                 , vector == 0.10.9.1
                 , void == 0.6.1
                 , wai == 1.4.0.1
                 , wai-app-static == 1.3.3.1
                 , wai-extra == 1.3.4.2
                 , wai-logger == 0.3.2
                 , warp == 1.3.9
                 , word8 == 0.0.4
                 , xml-conduit == 1.1.0.9
                 , xml-types == 0.3.4
                 , xss-sanitize == 0.3.4
                 , yaml == 0.8.5.2
                 , yesod == 1.1.9.4
                 , yesod-auth == 1.1.7
                 , yesod-core == 1.1.8.3
                 , yesod-default == 1.1.3.2
                 , yesod-form == 1.2.1.3
                 , yesod-json == 1.1.2.2
                 , yesod-persistent == 1.1.0.1
                 , yesod-recaptcha == 1.1.0.4
                 , yesod-routes == 1.1.2
                 , yesod-static == 1.1.2.3
                 , zlib == 0.5.4.1
                 , zlib-bindings == 0.1.1.3
                 , zlib-conduit == 1.0.0
      
executable         blog
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base == 4.6.0.1
                     , blog
                     , yesod-default == 1.1.3.2

    ghc-options:       -threaded -O2

executable         blog-utils
    if flag(library-only)
        Buildable: False

    main-is:           utils.hs
    hs-source-dirs:    utils
    build-depends:     blog
                     , Cabal == 1.16.0
                     , HaXml == 1.23.3
                     , ReadArgs == 1.2.1
                     , SHA == 1.6.1
                     , aeson == 0.6.2.1
                     , ansi-terminal == 0.6.1
                     , array == 0.4.0.1
                     , asn1-data == 0.7.1
                     , asn1-types == 0.2.2
                     , attoparsec == 0.10.4.0
                     , attoparsec-conduit == 1.0.1.2
                     , authenticate == 1.3.2.6
                     , base == 4.6.0.1
                     , base-unicode-symbols == 0.2.2.4
                     , base64-bytestring == 1.0.0.1
                     , base64-conduit == 1.0.0
                     , basic-prelude == 0.3.6.0
                     , bin-package-db == 0.0.0.0
                     , binary == 0.5.1.1
                     , blaze-builder == 0.3.3.2
                     , blaze-builder-conduit == 1.0.0
                     , blaze-html == 0.6.1.2
                     , blaze-markup == 0.5.1.6
                     , byteable == 0.1.1
                     , byteorder == 1.0.4
                     , bytestring == 0.10.0.2
                     , case-insensitive == 1.1.0.2
                     , cereal == 0.3.5.2
                     , certificate == 1.3.9
                     , cipher-aes == 0.2.6
                     , cipher-rc4 == 0.1.4
                     , classy-prelude == 0.5.8
                     , clientsession == 0.9.0.3
                     , conduit == 1.0.9.3
                     , containers == 0.5.0.0
                     , cookie == 0.4.0.1
                     , cprng-aes == 0.5.2
                     , crypto-api == 0.12.2.2
                     , crypto-cipher-types == 0.0.9
                     , crypto-conduit == 0.5.2.1
                     , crypto-numbers == 0.2.3
                     , crypto-pubkey == 0.2.3
                     , crypto-pubkey-types == 0.4.1
                     , crypto-random == 0.0.7
                     , cryptohash == 0.9.1
                     , cryptohash-cryptoapi == 0.1.0
                     , css-text == 0.1.1
                     , data-default == 0.5.3
                     , data-default-class == 0.0.1
                     , data-default-instances-base == 0.0.1
                     , data-default-instances-containers == 0.0.1
                     , data-default-instances-dlist == 0.0.1
                     , data-default-instances-old-locale == 0.0.1
                     , date-cache == 0.3.0
                     , deepseq == 1.3.0.1
                     , directory == 1.2.0.1
                     , dlist == 0.6.0.1
                     , email-validate == 1.0.0
                     , entropy == 0.2.2.4
                     , failure == 0.2.0.1
                     , fast-logger == 0.3.1
                     , file-embed == 0.0.6
                     , filepath == 1.3.0.1
                     , fsnotify == 0.0.11
                     , ghc == 7.6.3
                     , ghc-paths == 0.1.0.9
                     , ghc-prim == 0.3.0.0
                     , hamlet == 1.1.7.5
                     , hashable == 1.2.1.0
                     , hinotify == 0.3.6
                     , hjsmin == 0.1.4.1
                     , hoopl == 3.9.0.0
                     , hpc == 0.6.0.0
                     , http-attoparsec == 0.1.0
                     , http-conduit == 1.9.6
                     , http-date == 0.0.4
                     , http-reverse-proxy == 0.1.1.6
                     , http-types == 0.8.3
                     , integer-gmp == 0.5.0.0
                     , language-javascript == 0.5.7
                     , lifted-base == 0.2.1.1
                     , mime-mail == 0.4.3
                     , mime-types == 0.1.0.3
                     , mmorph == 1.0.0
                     , monad-control == 0.3.2.2
                     , monad-logger == 0.3.1.1
                     , mtl == 2.1.2
                     , nats == 0.1.2
                     , network == 2.4.2.1
                     , network-conduit == 1.0.0
                     , network-info == 0.2.0.3
                     , old-locale == 1.0.0.5
                     , old-time == 1.1.0.1
                     , optparse-applicative == 0.5.2.1
                     , parsec == 3.1.4
                     , path-pieces == 0.1.3.1
                     , pem == 0.2.1
                     , persistent == 1.1.5.1
                     , persistent-sqlite == 1.1.5
                     , persistent-template == 1.1.3.1
                     , polyparse == 1.9
                     , pool-conduit == 0.1.2
                     , pretty == 1.1.1.0
                     , primitive == 0.5.1.0
                     , process == 1.1.0.2
                     , project-template == 0.1.3.2
                     , publicsuffixlist == 0.1
                     , pureMD5 == 2.1.2.1
                     , pwstore-fast == 2.4.1
                     , random == 1.0.1.1
                     , regex-base == 0.93.2
                     , regex-compat == 0.95.1
                     , regex-posix == 0.95.2
                     , resource-pool == 0.2.1.1
                     , resourcet == 0.4.10
                     , rss == 3000.2.0.2
                     , rts == 1.0
                     , safe == 0.3.3
                     , securemem == 0.1.3
                     , semigroups == 0.12.1
                     , shakespeare == 1.0.5.1
                     , shakespeare-css == 1.0.6.6
                     , shakespeare-i18n == 1.0.0.5
                     , shakespeare-js == 1.1.4.1
                     , shakespeare-text == 1.0.0.10
                     , silently == 1.2.4.1
                     , simple-sendfile == 0.2.13
                     , skein == 1.0.8
                     , socks == 0.5.4
                     , split == 0.2.2
                     , stm == 2.4.2
                     , strict == 0.3.2
                     , stringsearch == 0.3.6.5
                     , syb == 0.4.1
                     , system-fileio == 0.3.11
                     , system-filepath == 0.4.8
                     , tagged == 0.7
                     , tagsoup == 0.13
                     , tar == 0.4.0.1
                     , template-haskell == 2.8.0.0
                     , text == 0.11.3.1
                     , time == 1.4.0.1
                     , tls == 1.1.5
                     , tls-extra == 0.6.6
                     , transformers == 0.3.0.0
                     , transformers-base == 0.4.1
                     , unix == 2.6.0.1
                     , unix-compat == 0.4.1.1
                     , unix-time == 0.1.9
                     , unordered-containers == 0.2.3.3
                     , utf8-light == 0.4.2
                     , utf8-string == 0.3.7
                     , vault == 0.2.0.4
                     , vector == 0.10.9.1
                     , void == 0.6.1
                     , wai == 1.4.0.1
                     , wai-app-static == 1.3.3.1
                     , wai-extra == 1.3.4.2
                     , wai-logger == 0.3.2
                     , warp == 1.3.9
                     , word8 == 0.0.4
                     , xml-conduit == 1.1.0.9
                     , xml-types == 0.3.4
                     , xss-sanitize == 0.3.4
                     , yaml == 0.8.5.2
                     , yesod == 1.1.9.4
                     , yesod-auth == 1.1.7
                     , yesod-core == 1.1.8.3
                     , yesod-default == 1.1.3.2
                     , yesod-form == 1.2.1.3
                     , yesod-json == 1.1.2.2
                     , yesod-persistent == 1.1.0.1
                     , yesod-recaptcha == 1.1.0.4
                     , yesod-routes == 1.1.2
                     , yesod-static == 1.1.2.3
                     , zlib == 0.5.4.1
                     , zlib-bindings == 0.1.1.3
                     , zlib-conduit == 1.0.0
 
    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends:     Cabal == 1.16.0
                     , HaXml == 1.23.3
                     , ReadArgs == 1.2.1
                     , SHA == 1.6.1
                     , aeson == 0.6.2.1
                     , ansi-terminal == 0.6.1
                     , array == 0.4.0.1
                     , asn1-data == 0.7.1
                     , asn1-types == 0.2.2
                     , attoparsec == 0.10.4.0
                     , attoparsec-conduit == 1.0.1.2
                     , authenticate == 1.3.2.6
                     , base == 4.6.0.1
                     , base-unicode-symbols == 0.2.2.4
                     , base64-bytestring == 1.0.0.1
                     , base64-conduit == 1.0.0
                     , basic-prelude == 0.3.6.0
                     , bin-package-db == 0.0.0.0
                     , binary == 0.5.1.1
                     , blaze-builder == 0.3.3.2
                     , blaze-builder-conduit == 1.0.0
                     , blaze-html == 0.6.1.2
                     , blaze-markup == 0.5.1.6
                     , byteable == 0.1.1
                     , byteorder == 1.0.4
                     , bytestring == 0.10.0.2
                     , case-insensitive == 1.1.0.2
                     , cereal == 0.3.5.2
                     , certificate == 1.3.9
                     , cipher-aes == 0.2.6
                     , cipher-rc4 == 0.1.4
                     , classy-prelude == 0.5.8
                     , clientsession == 0.9.0.3
                     , conduit == 1.0.9.3
                     , containers == 0.5.0.0
                     , cookie == 0.4.0.1
                     , cprng-aes == 0.5.2
                     , crypto-api == 0.12.2.2
                     , crypto-cipher-types == 0.0.9
                     , crypto-conduit == 0.5.2.1
                     , crypto-numbers == 0.2.3
                     , crypto-pubkey == 0.2.3
                     , crypto-pubkey-types == 0.4.1
                     , crypto-random == 0.0.7
                     , cryptohash == 0.9.1
                     , cryptohash-cryptoapi == 0.1.0
                     , css-text == 0.1.1
                     , data-default == 0.5.3
                     , data-default-class == 0.0.1
                     , data-default-instances-base == 0.0.1
                     , data-default-instances-containers == 0.0.1
                     , data-default-instances-dlist == 0.0.1
                     , data-default-instances-old-locale == 0.0.1
                     , date-cache == 0.3.0
                     , deepseq == 1.3.0.1
                     , directory == 1.2.0.1
                     , dlist == 0.6.0.1
                     , email-validate == 1.0.0
                     , entropy == 0.2.2.4
                     , failure == 0.2.0.1
                     , fast-logger == 0.3.1
                     , file-embed == 0.0.6
                     , filepath == 1.3.0.1
                     , fsnotify == 0.0.11
                     , ghc == 7.6.3
                     , ghc-paths == 0.1.0.9
                     , ghc-prim == 0.3.0.0
                     , hamlet == 1.1.7.5
                     , hashable == 1.2.1.0
                     , hinotify == 0.3.6
                     , hjsmin == 0.1.4.1
                     , hoopl == 3.9.0.0
                     , hpc == 0.6.0.0
                     , http-attoparsec == 0.1.0
                     , http-conduit == 1.9.6
                     , http-date == 0.0.4
                     , http-reverse-proxy == 0.1.1.6
                     , http-types == 0.8.3
                     , integer-gmp == 0.5.0.0
                     , language-javascript == 0.5.7
                     , lifted-base == 0.2.1.1
                     , mime-mail == 0.4.3
                     , mime-types == 0.1.0.3
                     , mmorph == 1.0.0
                     , monad-control == 0.3.2.2
                     , monad-logger == 0.3.1.1
                     , mtl == 2.1.2
                     , nats == 0.1.2
                     , network == 2.4.2.1
                     , network-conduit == 1.0.0
                     , network-info == 0.2.0.3
                     , old-locale == 1.0.0.5
                     , old-time == 1.1.0.1
                     , optparse-applicative == 0.5.2.1
                     , parsec == 3.1.4
                     , path-pieces == 0.1.3.1
                     , pem == 0.2.1
                     , persistent == 1.1.5.1
                     , persistent-sqlite == 1.1.5
                     , persistent-template == 1.1.3.1
                     , polyparse == 1.9
                     , pool-conduit == 0.1.2
                     , pretty == 1.1.1.0
                     , primitive == 0.5.1.0
                     , process == 1.1.0.2
                     , project-template == 0.1.3.2
                     , publicsuffixlist == 0.1
                     , pureMD5 == 2.1.2.1
                     , pwstore-fast == 2.4.1
                     , random == 1.0.1.1
                     , regex-base == 0.93.2
                     , regex-compat == 0.95.1
                     , regex-posix == 0.95.2
                     , resource-pool == 0.2.1.1
                     , resourcet == 0.4.10
                     , rss == 3000.2.0.2
                     , rts == 1.0
                     , safe == 0.3.3
                     , securemem == 0.1.3
                     , semigroups == 0.12.1
                     , shakespeare == 1.0.5.1
                     , shakespeare-css == 1.0.6.6
                     , shakespeare-i18n == 1.0.0.5
                     , shakespeare-js == 1.1.4.1
                     , shakespeare-text == 1.0.0.10
                     , silently == 1.2.4.1
                     , simple-sendfile == 0.2.13
                     , skein == 1.0.8
                     , socks == 0.5.4
                     , split == 0.2.2
                     , stm == 2.4.2
                     , strict == 0.3.2
                     , stringsearch == 0.3.6.5
                     , syb == 0.4.1
                     , system-fileio == 0.3.11
                     , system-filepath == 0.4.8
                     , tagged == 0.7
                     , tagsoup == 0.13
                     , tar == 0.4.0.1
                     , template-haskell == 2.8.0.0
                     , text == 0.11.3.1
                     , time == 1.4.0.1
                     , tls == 1.1.5
                     , tls-extra == 0.6.6
                     , transformers == 0.3.0.0
                     , transformers-base == 0.4.1
                     , unix == 2.6.0.1
                     , unix-compat == 0.4.1.1
                     , unix-time == 0.1.9
                     , unordered-containers == 0.2.3.3
                     , utf8-light == 0.4.2
                     , utf8-string == 0.3.7
                     , vault == 0.2.0.4
                     , vector == 0.10.9.1
                     , void == 0.6.1
                     , wai == 1.4.0.1
                     , wai-app-static == 1.3.3.1
                     , wai-extra == 1.3.4.2
                     , wai-logger == 0.3.2
                     , warp == 1.3.9
                     , word8 == 0.0.4
                     , xml-conduit == 1.1.0.9
                     , xml-types == 0.3.4
                     , xss-sanitize == 0.3.4
                     , yaml == 0.8.5.2
                     , yesod == 1.1.9.4
                     , yesod-auth == 1.1.7
                     , yesod-core == 1.1.8.3
                     , yesod-default == 1.1.3.2
                     , yesod-form == 1.2.1.3
                     , yesod-json == 1.1.2.2
                     , yesod-persistent == 1.1.0.1
                     , yesod-recaptcha == 1.1.0.4
                     , yesod-routes == 1.1.2
                     , yesod-static == 1.1.2.3
                     , zlib == 0.5.4.1
                     , zlib-bindings == 0.1.1.3
                     , zlib-conduit == 1.0.0
